# Proyecto-Wallet-Tracket

./: package-lock.json
backend/: db.sqlite3  manage.py  pyproject.toml
backend/apps/transactions/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/transactions/migrations/: 0001_initial.py  0002_initial.py
backend/apps/users/: models.py  serializers.py  views.py
backend/apps/users/migrations/: 0001_initial.py
backend/wallet_tracker/: __init__.py  settings.py  urls.py  wsgi.py
wallet-tracker-frontend/: index.html  package-lock.json  package.json
wallet-tracker-frontend/src/: App.jsx
wallet-tracker-frontend/src/components/: Layout.css  Layout.jsx
wallet-tracker-frontend/src/context/: AuthContext.jsx
wallet-tracker-frontend/src/pages/: AddTransaction.jsx  Categories.jsx  Dashboard.css  Dashboard.jsx  Login.css  Login.jsx  Settings.jsx  Transactions.jsx
wallet-tracker-frontend/src/services/: api.js
